# ProtSyntax

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
Core_code/: __init__.py  attention.py  bi_gated_deltanet.py  loss.py  rope.py
Data/: README.md
Model_weight/: README.md
docs/: github_publish.md  release_checklist.md
scripts/: publish_to_github.sh
